removing redundant package names