@@ -1,5 +1,8 @@
 package io.cafeai.core.ai;
 
+import java.util.Collections;
+import java.util.List;
+
 /**
  * The result of a single LLM prompt call.
  *
@@ -23,7 +26,7 @@ public final class PromptResponse {
     private final int     outputTokens;
     private final String  modelId;
     private final boolean fromCache;
-    private final java.util.List<Object> ragDocuments;  // List<RagDocument>, typed as Object to avoid dep
+    private final List<Object> ragDocuments;  // List<RagDocument>, typed as Object to avoid dep
 
     private PromptResponse(Builder b) {
         this.text         = b.text;
@@ -32,8 +35,8 @@ public final class PromptResponse {
         this.modelId      = b.modelId;
         this.fromCache    = b.fromCache;
         this.ragDocuments = b.ragDocuments != null
-            ? java.util.Collections.unmodifiableList(b.ragDocuments)
-            : java.util.List.of();
+            ? Collections.unmodifiableList(b.ragDocuments)
+            : List.of();
     }
 
     /** The model's text response. */
@@ -59,7 +62,7 @@ public final class PromptResponse {
      * Empty list if RAG is not configured or no documents were retrieved.
      * Each element is an {@code io.cafeai.rag.RagDocument} instance.
      */
-    public java.util.List<Object> ragDocuments() { return ragDocuments; }
+    public List<Object> ragDocuments() { return ragDocuments; }
 
     /** Shorthand -- delegates to {@link #text()}. Makes response usable as a string. */
     @Override
@@ -73,14 +76,14 @@ public final class PromptResponse {
         private int     outputTokens;
         private String  modelId;
         private boolean fromCache;
-        private java.util.List<Object> ragDocuments;
+        private List<Object> ragDocuments;
 
         public Builder text(String t)                         { this.text         = t; return this; }
         public Builder promptTokens(int n)                    { this.promptTokens = n; return this; }
         public Builder outputTokens(int n)                    { this.outputTokens = n; return this; }
         public Builder modelId(String m)                      { this.modelId      = m; return this; }
         public Builder fromCache(boolean c)                   { this.fromCache    = c; return this; }
-        public Builder ragDocuments(java.util.List<Object> d) { this.ragDocuments = d; return this; }
+        public Builder ragDocuments(List<Object> d) { this.ragDocuments = d; return this; }
 
         public PromptResponse build()                         { return new PromptResponse(this); }
     }
